tests/invalid/invalid_assignment.lang
proc "c" main() i32 {
    1 = 1;
    return 0;
}
